# api/swagger/swagger.yaml
@@ -12,6 +12,32 @@ consumes:
 produces:
   - application/json
 paths:
+  /bookmarks/{bookmark_id}:
+    x-swagger-router-controller: bookmarks
+    put:
+      description: Update an existing bookmark
+      operationId: updateBookmark
+      parameters:
+        - name: bookmark_id
+          in: path
+          description: id for the updated Bookmark
+          required: true
+          type: string
+        - name: bookmark
+          description: "Bookmark"
+          required: true
+          in: body
+          schema:
+            $ref: "#/definitions/Bookmark"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Bookmark"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"  
   /bookmarks:
     x-swagger-router-controller: bookmarks
     get:
@@ -61,6 +87,10 @@ definitions:
         type: string
       url:
         type: string
+      tags:
+        type: array
+        items:
+          type: string
   ErrorResponse:
     required:
       - message
